@@ -125,7 +125,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "ponos-K", 1, "Ponos: value for the K constant [10]" , "(E)" },
   { '\0', "ponos-coef", 1, "Ponos: schedule coefficients bound [10]" , "(E)" },
   { '\0', "ponos-obj", 1, "Ponos: objective constraints [none],\n\t\t\t\t\tcodelet,pluto" , "(E)" },
-  { '\0', "ponos-obj-list", 1, "Ponos: constraints/objectives list from\n\t\t\t\t\tsumiterpos,paramcoef0,maxouterpar,\n\t\t\t\t\tmaxinnerpar,maxperm,mindepdist,\n\t\t\t\t\tmaxdepsolve,linearind" , "(E)" },
+  { '\0', "ponos-obj-list", 1, "Ponos: constraints/objectives list from\n\t\t\t\t\tsumiterpos,paramcoef0,maxouterpar,\n\t\t\t\t\tmaxinnerpar,maxperm,mindepdist,\n\t\t\t\t\tmaxdepsolve,linearind,gammapos" , "(E)" },
   { '\0', "ponos-pipsolve-lp", 0, "Ponos: Relax PIP to rational\n" , "(E)" },
 
   { '\0', "past-super-hoist", 0, "Hoist loop bounds (super aggresive)" , "(E)" },
@@ -791,6 +791,13 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
 		PONOS_CONSTRAINTS_LINEAR_INDEP;
 	      pos += strlen ("linearind") + 1;
 	      str += strlen ("linearind") + 1;
+	    }
+	  else if (! strncmp (str, "gammapos", strlen ("gammapos")))
+	    {
+	      options->ponos_objective_list[idx++] =
+		PONOS_OBJECTIVES_GAMMA_POS;
+	      pos += strlen ("gammapos") + 1;
+	      str += strlen ("gammapos") + 1;
 	    }
 	  else
 	    {
